# leo-go-trading-starter

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: smoke-test.yml
docs/: brokers.md  execution.md  strategy-roadmap.md
examples/: execution_policy.example.yml  sample_constantstable_trade.json  sample_leoprofit_trade.json  sample_novix_trade.json
scripts/: vendor_into_project.py
src/leo_go_trading/: __init__.py  cli.py  execution.py  go_api.py  models.py  planner.py  symbols.py
src/leo_go_trading/brokers/: __init__.py  base.py  dry_run.py  ibkr.py  schwab_payload.py  tastytrade_payload.py
tests/: test_execution.py  test_planner.py
